css/main.css
body {
    background-color: #fefefe;
    font-family: Helvetica,  Arial,  sans-serif;
    margin: 0;
    padding: 0;
}


body.black-background ul li {
    color: white;
}


#overlay {
   visibility: hidden;
    position: fixed;
    
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(255, 255, 255, 0.9);
    z-index: 1000;
}


#overlay #close img {
    width: 1.5rem;
    position: absolute;
    right: 0;
    padding: 2rem;
    cursor: pointer;
}

#navigate {
    
    width: 70%;
    height: 100%;
    margin: 15rem auto;
    
}

#navigate ul {
    list-style: none;
    font-size: 3rem;    
    text-align: center;
    line-height: 5rem;
    cursor: pointer;
}

#navigate ul li:hover {
    font-weight: bold;
}

#navigate ul a {
    text-decoration: none;
    color: #000
}

#icons {
    width: 20%;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    padding-left: 2rem;
}


#icons img {
    width: 2rem;
    padding: 0 1rem;
}


nav {
    text-align: center;
}

nav p {
    font-size: 1.5rem;
    padding: 0;
    margin: 0;
}

header {
    font-size: 13rem;
    padding: 0;
    margin: 0;
    text-align: center;
}

main {
    display: grid;
    place-items: center;
    width: 60vw;
    height: 60vh;
    margin: auto auto;
    
    
}

#content {
    background-color: #000;
    color: #fff;
    display: grid;
    place-items: center;
    height: 45vh;
    width: 45vw;
    overflow: hidden;
    border-radius: 2rem;
    background-size: cover;
    background-position: center;
    position: relative;
}


#content::before {
    content: "";
    position: absolute;
    top: 0;
    left: 100%;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    transition: left 1s ease-in-out;
}

#content.slide::before {
    left: 0;
}




#content h1 {
    padding: 0;
    margin: 0;
}




#content-about {
    background-color: #f0f0f0;
    color: #fff;
    
    height: 45vh;
    width: 45vw;
    overflow: hidden;
    border-radius: 2rem;
    
}

#content-about.new-bg {
    background-color: #242424; /* replace with the new color you want */
}

#top-content, #top-content-related {
    display: grid;
    place-items: center;
   width: 80%;
   margin: 0 auto;
   color: #000;
   padding: 2rem 0;
   text-align: justify;
   line-height: 1.2rem;
}


#top-content-related {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 2rem 0;
    width: 92%;
    text-align: center;
    place-items: center;
    
}

#top-content-related p{
    padding: 0;
    margin: 0;
    font-size: 0.9rem;

}

#top-content-related h4 {
    padding: 0;
    margin: 0;
    padding-top: 1rem;
}

#top-content img, #top-content-related img{
  
    transition: transform 1s ease-in-out;
    cursor: pointer;

    
}

#top-content-related img {
    margin-top: 1rem;
}

#top-content img, #top-content-related img{
  
    width: 10rem;
    border-radius: 1rem;
    
}



#top-content-related img:hover {
    transform: scale(1.1);
    transition: transform 1s ease-in-out;
}


#top-content p {
    padding: 0.5rem 0;
}



#top-content.new-color {
    color: #fff; /* replace with the new color you want */
}

#top-content-related #bottom-artists {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 2rem 0;
    width: 92%;
    text-align: center;
}

main ul {

    list-style: none;
    margin: 0;
    position: absolute;
    right: 0;
    top: 45%;
    padding: 0 2rem;
    
}

main ul img {
    width: 2rem;
}

#tracklist ul {
    position: absolute;
    left: 0;
    top: 45%;
}

#tracklist ul h3 {
    padding: 0;
    margin: 0;
}


#tracklist ul li {
    color: gray;
}

#playstore {
    width: 70%;
    display: grid;
    grid-template-columns: 10% 10% 10% 50% 15% 5%;

}

#playstore img {
    width: 2rem;
    cursor: pointer;
}

#playstore img:nth-child(2) {
    height: 2rem;
    padding: 0 0.1rem;
}

#playstore #trackLength {
    background-color: #e3e3e3;
    border-radius: 0.5rem;
    overflow: hidden;

}

#playstore #progressBar {
    background-color: #b3b3b3;
    height: 100%;
    width: 0;
    
}

#playstore  #time {
    
    display: grid;
    place-items: center;
    font-size: 0.7rem;
    padding-left: 0.5rem;
   
}

.conditions {
    height: 1.5rem;
    display: flex;
    
}






#night-day img {
   height: 1.5rem;
    padding: 2rem;
    justify-content: start;
    cursor: pointer;
    opacity: 0.4;   
    
}

#night-day img:hover {
    opacity: 1;
}

#menu {
    position: absolute;
    right: 0;
    padding: 2rem;
}

#menu img {
    width: 1.5rem;
    justify-content: flex-end;
    opacity: 0.4;
    cursor: pointer;
}

#menu img:hover {
    opacity: 1;
}


.vertical-volume::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    height: 10px !important;
    width: 10px !important;
    border-radius: 50%;
    background: grey;
}

.vertical-volume::-moz-range-thumb {
    border: none;
    height: 10px !important;
    width: 10px !important;
    border-radius: 50%;
    background: grey;
}

.volume-icon {
    height: 30px; /* Set the height as per your requirement */
    width: auto; /* This will maintain the aspect ratio of the image */ 
}


#volume-control {
    padding-left: 0.5rem;
}

